<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:app="http://schemas.android.com/apk/res-auto"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:id="@+id/register_layout"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      tools:context=".ui.register.Register">

            <android.support.v7.widget.Toolbar
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/toolbar_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    app:theme="@style/ToolbarThemeBlack"
                    app:titleTextColor="@color/HitamEnak"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/iklan_oilink"
                        android:textColor="@color/colorBlack"
                        android:textSize="12sp"/>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleContentDescription="Apa Saja Boleh"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorAccent">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                        <Spinner
                                android:id="@+id/sp_register_title"
                                android:background="@drawable/rounded_spinner_title"
                                android:layout_width="150dp"
                                android:layout_height="50dp"
                                android:scrollbarSize="700dp"
                                android:spinnerMode="dropdown"
                                android:dropDownVerticalOffset="50dp"
                                />

                        <EditText
                                android:id="@+id/et_register_nama"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginLeft="15dp"
                                android:inputType="text"
                                android:background="@drawable/rounded_style_border_gray"
                                android:hint="@string/nama_lengkap"
                                android:textColor="@color/colorBlack"
                                android:textSize="14sp"/>
                    </LinearLayout>

                </android.support.design.widget.TextInputLayout>

                <EditText
                        android:layout_marginTop="24dp"
                        android:id="@+id/et_register_nomor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_style_border_gray"
                        android:hint="@string/label_no_handphone"
                        android:inputType="phone"
                        android:textSize="14sp"/>
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp">

                    <EditText
                            android:id="@+id/et_register_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_style_border_gray"
                            android:ems="50"
                            android:hint="@string/label_password_register"
                            android:inputType="textPassword"
                            android:textColor="@color/colorBlack"
                            android:src="@drawable/ic_show_password"
                            android:textSize="14sp"/>
                    <ImageView
                            android:id="@+id/toggle_show_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="16dp"
                            android:src="@drawable/ic_show_password"/>
                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp">

                    <EditText
                            android:id="@+id/et_register_password_confirmation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_style_border_gray"
                            android:ems="50"
                            android:hint="@string/password_confirmation"
                            android:inputType="textPassword"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp"/>

                    <ImageView
                            android:id="@+id/toggle_show_confirm_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="16dp"
                            android:src="@drawable/ic_show_password"/>
                </RelativeLayout>
                <Button
                        android:id="@+id/btn_register_daftar"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/rounded_button_style"
                        android:text="@string/daftar"
                        android:textColor="#ffff"/>
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
                android:id="@+id/progressBar_register"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>